cabal-version:       3.4

name:                cardaniaDelegatorDividends
version:             0.1.0.0

build-type:          Simple

executable delegatorDividends
  default-language:    Haskell2010
  build-depends:       base,
                       aeson,
                       bytestring,
                       time,
                       graphql-client,
                       aeson-schemas
  other-modules:       API,
                       Scalars
  main-is:             Main.hs 